--- a/tips.html
+++ b/tips.html
@@ -329,6 +329,7 @@
     <div class="topbar-right">
       <a class="btn" href="maps.html">Maps</a>
       <a class="btn" href="wiki.html">Wiki</a>
+      <a class="btn" href="controls.html">Controls</a>
     </div>
   </div>
 
