--- a/wiki.html
+++ b/wiki.html
@@ -142,6 +142,14 @@
       // Collectibles
       { name:"Skull Neon", page:"collectibles.html", id:"skull-neon", img:"Skull neon.png", tags:["Collectibles","Neon Signs"], notes:"Red" },
       { name:"QR Sign", page:"collectibles.html", id:"qr-sign", img:"Qr sign.png", tags:["Collectibles","Posters"] }
+
+      // Character Modeler
+      <a class="cardlink" href="modeler.html">
+  <div class="cardlink-inner">
+    <div class="cardlink-title">Character Modeler</div>
+    <div class="cardlink-sub">Swap shirts, pants, helmets, masks, backpacks (FBX)</div>
+  </div>
+</a>
     ];
 
     const qEl = document.getElementById("q");
