--- a/modeler.htm
+++ b/modeler.htm
@@ -27,6 +27,25 @@
       <div class="top-right">
         <button class="btn" id="resetBtn" type="button">Reset</button>
         <button class="btn" id="screenshotBtn" type="button">Screenshot</button>
+      <div class="brand">Wiki <span class="badge">Character Modeler</span></div>
+        <a href="wiki.html"><span>Hub</span><span class="small">→</span></a>
+        <a href="weapons.html"><span>Weapons</span><span class="small">→</span></a>
+        <a href="masks.html"><span>Masks</span><span class="small">→</span></a>
+        <a href="armor.html"><span>Armor</span><span class="small">→</span></a>
+        <a href="ammo.html"><span>Ammo</span><span class="small">→</span></a>
+        <a href="helmets.html"><span>Helmets</span><span class="small">→</span></a>
+        <a href="consumables.html"><span>Consumables</span><span class="small">→</span></a>
+        <a href="crafting.html"><span>Crafting</span><span class="small">→</span></a>
+        <a href="backpacks.html"><span>Backpacks</span><span class="small">→</span></a>
+        <a href="collectibles.html"><span>Collectibles</span><span class="small">→</span></a>
+<div class="hr"></div>
+
+<a class="active" href="modeler.html"><span>Character Modeler</span><span class="small">→</span></a>
+
+<div class="hr"></div>
+
+<a class="active" href="modeler.html"><span>Character Modeler</span><span class="small">→</span></a>
+
       </div>
     </div>
   </div>
@@ -40,11 +59,11 @@
         <div class="slot">
           <label>Base Character (FBX)</label>
           <div class="row">
-            <input class="text" id="basePath" value="models/SK_BaseModel.fbx" />
+            <input class="text" id="basePath" value="assets/models/SK_BaseModel.fbx" />
             <button class="btn" id="loadBaseBtn" type="button">Load</button>
           </div>
           <div class="small muted">
-            Put your base FBX at <span class="code">models/SK_BaseModel.fbx</span> (or change path).
+            Put your base FBX at <span class="code">aasets/models/SK_BaseModel.fbx</span> (or change path).
           </div>
         </div>
 
