--- a/modeler.html
+++ b/modeler.html
@@ -21,23 +21,14 @@
   <div class="topbar">
     <div class="topbar-inner">
       <div class="top-left">
-        <a class="btn" href="index.html">← Menu</a>
+        <a class="btn" href="wiki.html"><span>Back to Wiki</span><span class="small">→</span></a>
         <div class="brand">Tools <span class="badge">Character Modeler</span></div>
       </div>
       <div class="top-right">
         <button class="btn" id="resetBtn" type="button">Reset</button>
         <button class="btn" id="screenshotBtn" type="button">Screenshot</button>
       <div class="brand">Wiki <span class="badge">Character Modeler</span></div>
-        <a href="wiki.html"><span>Hub</span><span class="small">→</span></a>
-        <a href="weapons.html"><span>Weapons</span><span class="small">→</span></a>
-        <a href="masks.html"><span>Masks</span><span class="small">→</span></a>
-        <a href="armor.html"><span>Armor</span><span class="small">→</span></a>
-        <a href="ammo.html"><span>Ammo</span><span class="small">→</span></a>
-        <a href="helmets.html"><span>Helmets</span><span class="small">→</span></a>
-        <a href="consumables.html"><span>Consumables</span><span class="small">→</span></a>
-        <a href="crafting.html"><span>Crafting</span><span class="small">→</span></a>
-        <a href="backpacks.html"><span>Backpacks</span><span class="small">→</span></a>
-        <a href="collectibles.html"><span>Collectibles</span><span class="small">→</span></a>
+        <a class="btn" href="wiki.html"><span>Hub</span><span class="small">→</span></a>
 <div class="hr"></div>
 
 <a class="active" href="modeler.html"><span>Character Modeler</span><span class="small">→</span></a>
