--- a/masks.html
+++ b/masks.html
@@ -35,7 +35,7 @@
           <a href="crafting.html"><span>Crafting</span><span class="small">→</span></a>
           <a href="backpacks.html"><span>Backpacks</span><span class="small">→</span></a>
           <a href="collectibles.html"><span>Collectibles</span><span class="small">→</span></a>|
-          <a href="modeler.html"><span>Character Modeler</span><span class="small">→</span></a>
+          <a href="modeler.html"><span>Character Customizer</span><span class="small">→</span></a>
         </div>
 
         <div class="note">
