--- a/crafting.html
+++ b/crafting.html
@@ -42,7 +42,7 @@ FILE: crafting.html  (REDO)
           <a class="active" href="crafting.html"><span>Crafting</span><span class="small">→</span></a>
           <a href="backpacks.html"><span>Backpacks</span><span class="small">→</span></a>
           <a href="collectibles.html"><span>Collectibles</span><span class="small">→</span></a>
-          <a href="modeler.html"><span>Character Modeler</span><span class="small">→</span></a>
+          <a href="modeler.html"><span>Character Customizer</span><span class="small">→</span></a>
         </div>
 
         <div class="note">
