Add Character Customizer link to controls.html

--- a/controls.html
+++ b/controls.html
@@ -70,7 +70,7 @@ Source: https://deadpoly.fandom.com/wiki/Controls
           <a href="crafting.html"><span>Crafting</span><span class="small">→</span></a>
           <a href="backpacks.html"><span>Backpacks</span><span class="small">→</span></a>
           <a href="collectibles.html"><span>Collectibles</span><span class="small">→</span></a>
-
+          <a href="modeler.html"><span>Character Customizer</span><span class="small">→</span></a>
           <!-- Add this link into your Tips N Tricks page too (see note at bottom) -->
           <a class="active" href="controls.html"><span>Controls</span><span class="small">→</span></a>
           <!-- If you already have a Tips page file, add it here and on that page too:
