--- a/backpacks.html
+++ b/backpacks.html
@@ -43,7 +43,7 @@
           <a href="crafting.html"><span>Crafting</span><span class="small">→</span></a>
           <a class="active" href="backpacks.html"><span>Backpacks</span><span class="small">→</span></a>
           <a href="collectibles.html"><span>Collectibles</span><span class="small">→</span></a>
-          <a href="modeler.html"><span>Character Modeler</span><span class="small">→</span></a>
+          <a href="modeler.html"><span>Character Customizer</span><span class="small">→</span></a>
         </div>
 
         <div class="note">
