Rename 'Character Modeler' to 'Character Customizer'

--- a/armor.html
+++ b/armor.html
@@ -42,7 +42,7 @@ FILE: armor.html  (REDO)
           <a href="crafting.html"><span>Crafting</span><span class="small">→</span></a>
           <a href="backpacks.html"><span>Backpacks</span><span class="small">→</span></a>
           <a href="collectibles.html"><span>Collectibles</span><span class="small">→</span></a>
-          <a href="modeler.html"><span>Character Modeler</span><span class="small">→</span></a>
+          <a href="modeler.html"><span>Character Customizer</span><span class="small">→</span></a>
         </div>
       </div>
 
